2.2.13

 *) [*nix] Fix handling of FastCgiWrapper when passed a real path,
    i.e. other than "on" or "off".  Michael Richards [michael@fastmail.ca]

 *) Eliminate the logging of "incomplete headers (0 bytes) received from 
    server" when a client aborts. 

 *) [WIN32] Fix a delay in handling large POSTs to named pipe based
    servers. Philip Gladstone [philip@okena.com]

 *) [*nix/AP2] Prevent the module from being initalized twice at startup
    (resulting in confusing error messages to the log).

 *) Eliminate the need for SetHandler or AddHandler with static or 
    external applications.

 *) Limit PM requests to start a dynamic application
    to 5sec to prevent endless spinning (this is a drop-dead
    limit that should only occur if the socket/named_pipe directory
    is removed out from under a running server).

 *) [*nix] Change the default socket directory from /tmp/fcgi to:
    Apache  - logs/fastcgi
    Apache2 - RUNTIMEDIR/fastcgi

 *) Add -user & -group args to FastCgiServer and FastCgiExternalServer
    for use with wrappers (in lieu of finding the user/group associated
    with a virtual host - under Apache2 this isn't accomodated).

 *) [WIN32] Under Apache2, require v2.0.41 or later in order to pickup my 
    apr_proc_create() changes.

 *) Log when invoking and restoring the restart backoff policy.

 *) [WIN32] Prevent intermittent ReadFile() failures (properly initialize the
    OVERLAPPED structure). 

 *) Eliminate need for dummy files for external servers under Apache2

 *) Fix auth compatibility mode handling for access checker and authorizer

 *) Fix HEAD request handling.  Based on a patch by 
    Chris Lightfoot [chris@ex-parrot.com]

 *) [*nix] When autoupdate is enabled touch the socket when restarting
    the processes to prevent further requests.  
    Eckebrecht von Pappenheim [evp@heise.de]

 *) Apache 2.0 support.

 *) [WIN32] Don't read from a potentially closed named pipe. 
    Philip Gladstone [philip@okena.com]
